# Goal-Tracking-Portal

./: .env.example  .gitignore  .vercelignore  FINAL_SUBMISSION_REPORT.md  README.md  package-lock.json  package.json  pyproject.toml  railway.json  render.yaml
ai/: goal_intelligence.py
backend/: alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/ai/: engine.py
backend/app/auth/: security.py
backend/app/database/: schema_guard.py  session.py
backend/app/models/: entities.py
backend/app/routes/: admin.py  ai.py  auth.py  comments.py  dashboard.py  goals.py  reports.py
backend/app/schemas/: dto.py
backend/app/services/: cache.py  calculations.py  cycle_service.py  escalation_service.py  seed.py  serializers.py  shared_goal_service.py  unlock_service.py
backend/app/utils/: ids.py
database/: schema.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/components/charts/: AnalyticsCharts.jsx
frontend/src/components/common/: AppLayout.jsx  Button.jsx  Card.jsx  Form.jsx  State.jsx  Toast.jsx  VoiceInput.jsx
frontend/src/components/dashboard/: KpiCard.jsx  ProgressRing.jsx
frontend/src/components/forms/: GoalForm.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useDashboard.js
frontend/src/pages/: Analytics.jsx  AuditLogs.jsx  HRCopilot.jsx  Notifications.jsx  Profile.jsx  Reports.jsx  Settings.jsx
frontend/src/routes/: DashboardRedirect.jsx  ProtectedRoute.jsx
frontend/src/services/: api.js
(+7 files in other folders)
